# airflow-mentoring-3

./: .gitignore  docker-compose.yaml  pyproject.toml  run.py
dags/: raw_linx_api.py  raw_poke_api.py  raw_scooby_db.py  raw_spreadsheets.py  raw_tabnews.py  refined_modeling.py  refined_modeling2.py  trusted_linx_api.py  trusted_poke_api.py  trusted_scooby_db.py  trusted_spreadsheets.py
docs/: airflow.excalidraw
plugins/resources/hooks/: json_file_storage_hook.py  minio_hook.py
plugins/resources/hoooks/: json_file_storage_hook.py  tabnews_hook.py
plugins/resources/operators/: tabnews_to_gcs.py  tabnews_to_json.py  tabnews_to_minio.py
plugins/resources/utils/: datasets.py  date.py
