[tool.poetry]
name = "first-airflow-steps"
version = "0.1.0"
description = ""
authors = ["Rodrigo Coelho <rodrigo.coelho@hotmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
apache-airflow = "^2.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.1"
autoflake = "^2.2.1"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_local_folder =["plugins/*"]

[tool.taskipy.tasks]
lint = "black dags plugins && isort dags plugins --profile black && autoflake --in-place --recursive --remove-all-unused-imports --remove-unused-variables dags && autoflake --in-place --recursive --remove-all-unused-imports --remove-unused-variables plugins"
