[tool.poetry]
name = "first-airflow-steps"
version = "0.1.0"
description = ""
authors = ["Rodrigo Coelho <rodrigo.coelho@hotmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
apache-airflow = "^2.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.1"
autoflake = "^2.2.1"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = ["py310"]

[tool.isort]
profile = "black"
py_version = "310"
known_first_party = "plugins/"

[tool.autoflake]
recursive = true
in_place = true
remove_unused_variables = true
remove_all_unused_imports = true

[tool.taskipy.tasks]
lint = "isort . && autoflake . && black ."
